%YAML 1.1
%TAG !u! tag:unity3d.com,2011:
<<<<<<< HEAD
<<<<<<< HEAD
--- !u!1101 &-9192389277068315037
AnimatorStateTransition:
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: 
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: isMoving
    m_EventTreshold: 0
  m_DstStateMachine: {fileID: 0}
  m_DstState: {fileID: 8327408247714181870}
  m_Solo: 0
  m_Mute: 0
  m_IsExit: 0
  serializedVersion: 3
  m_TransitionDuration: 0.281652
  m_TransitionOffset: 0
  m_ExitTime: 0.71540797
  m_HasExitTime: 0
  m_HasFixedDuration: 0
  m_InterruptionSource: 1
  m_OrderedInterruption: 1
  m_CanTransitionToSelf: 1
--- !u!1101 &-9136861321367719052
AnimatorStateTransition:
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: 
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: isJumping
    m_EventTreshold: 0
  m_DstStateMachine: {fileID: 0}
  m_DstState: {fileID: -4788512653900767173}
  m_Solo: 0
  m_Mute: 0
  m_IsExit: 0
  serializedVersion: 3
  m_TransitionDuration: 0.25
  m_TransitionOffset: 0
  m_ExitTime: 0.5161291
  m_HasExitTime: 0
  m_HasFixedDuration: 1
  m_InterruptionSource: 0
  m_OrderedInterruption: 1
  m_CanTransitionToSelf: 1
=======
>>>>>>> parent of 290f4b8 (Merge pull request #10 from djbubbles23/jacob-enemy)
=======
>>>>>>> parent of 290f4b8 (Merge pull request #10 from djbubbles23/jacob-enemy)
--- !u!1102 &-9014683350340567965
AnimatorState:
  serializedVersion: 6
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: Idle
  m_Speed: 1
  m_CycleOffset: 0
  m_Transitions:
<<<<<<< HEAD
<<<<<<< HEAD
  - {fileID: -9192389277068315037}
  - {fileID: 258792254146897031}
  - {fileID: -4209995217071926000}
=======
  - {fileID: 3009078668792262080}
  - {fileID: 4883768831082141029}
  - {fileID: -4609278937042982417}
>>>>>>> parent of 290f4b8 (Merge pull request #10 from djbubbles23/jacob-enemy)
=======
  - {fileID: 3009078668792262080}
  - {fileID: 4883768831082141029}
  - {fileID: -4609278937042982417}
>>>>>>> parent of 290f4b8 (Merge pull request #10 from djbubbles23/jacob-enemy)
  m_StateMachineBehaviours: []
  m_Position: {x: 50, y: 50, z: 0}
  m_IKOnFeet: 0
  m_WriteDefaultValues: 1
  m_Mirror: 0
  m_SpeedParameterActive: 0
  m_MirrorParameterActive: 0
  m_CycleOffsetParameterActive: 0
  m_TimeParameterActive: 0
  m_Motion: {fileID: 7400000, guid: bed6c3dec79d2114bab3726121e9cd32, type: 2}
  m_Tag: 
  m_SpeedParameter: 
  m_MirrorParameter: 
  m_CycleOffsetParameter: 
  m_TimeParameter: 
<<<<<<< HEAD
<<<<<<< HEAD
--- !u!1101 &-8023699395987279276
AnimatorStateTransition:
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: 
  m_Conditions: []
  m_DstStateMachine: {fileID: 0}
  m_DstState: {fileID: -9014683350340567965}
  m_Solo: 0
  m_Mute: 0
  m_IsExit: 0
  serializedVersion: 3
  m_TransitionDuration: 0.04160732
  m_TransitionOffset: 0
  m_ExitTime: 0.93413085
  m_HasExitTime: 1
  m_HasFixedDuration: 0
  m_InterruptionSource: 2
  m_OrderedInterruption: 1
  m_CanTransitionToSelf: 1
=======
>>>>>>> parent of 290f4b8 (Merge pull request #10 from djbubbles23/jacob-enemy)
=======
>>>>>>> parent of 290f4b8 (Merge pull request #10 from djbubbles23/jacob-enemy)
--- !u!1101 &-7390647639524904122
AnimatorStateTransition:
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: 
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: isDead
    m_EventTreshold: 0
  m_DstStateMachine: {fileID: 0}
  m_DstState: {fileID: -150888120944435091}
  m_Solo: 0
  m_Mute: 0
  m_IsExit: 0
  serializedVersion: 3
  m_TransitionDuration: 0.25
  m_TransitionOffset: 0
  m_ExitTime: 0.02775009
  m_HasExitTime: 1
  m_HasFixedDuration: 1
  m_InterruptionSource: 1
  m_OrderedInterruption: 1
  m_CanTransitionToSelf: 1
<<<<<<< HEAD
<<<<<<< HEAD
--- !u!1101 &-7048802963250527248
AnimatorStateTransition:
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: 
  m_Conditions: []
  m_DstStateMachine: {fileID: 0}
  m_DstState: {fileID: -9014683350340567965}
  m_Solo: 0
  m_Mute: 0
  m_IsExit: 0
  serializedVersion: 3
  m_TransitionDuration: 0.25
  m_TransitionOffset: 0
  m_ExitTime: 0.70000005
  m_HasExitTime: 1
  m_HasFixedDuration: 1
  m_InterruptionSource: 1
  m_OrderedInterruption: 1
  m_CanTransitionToSelf: 1
--- !u!1102 &-4788512653900767173
AnimatorState:
  serializedVersion: 6
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: Jump
  m_Speed: 1.5
  m_CycleOffset: 0
  m_Transitions:
  - {fileID: -7048802963250527248}
  m_StateMachineBehaviours: []
  m_Position: {x: 50, y: 50, z: 0}
  m_IKOnFeet: 0
  m_WriteDefaultValues: 1
  m_Mirror: 0
  m_SpeedParameterActive: 0
  m_MirrorParameterActive: 0
  m_CycleOffsetParameterActive: 0
  m_TimeParameterActive: 0
  m_Motion: {fileID: 7400000, guid: 071733e8eab3f0748b97ab0ec497441f, type: 2}
  m_Tag: 
  m_SpeedParameter: 
  m_MirrorParameter: 
  m_CycleOffsetParameter: 
  m_TimeParameter: 
--- !u!1101 &-4209995217071926000
=======
--- !u!1101 &-4609278937042982417
>>>>>>> parent of 290f4b8 (Merge pull request #10 from djbubbles23/jacob-enemy)
=======
--- !u!1101 &-4609278937042982417
>>>>>>> parent of 290f4b8 (Merge pull request #10 from djbubbles23/jacob-enemy)
AnimatorStateTransition:
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: 
  m_Conditions:
  - m_ConditionMode: 1
<<<<<<< HEAD
<<<<<<< HEAD
    m_ConditionEvent: isJumping
    m_EventTreshold: 0
  m_DstStateMachine: {fileID: 0}
  m_DstState: {fileID: -4788512653900767173}
=======
=======
>>>>>>> parent of 290f4b8 (Merge pull request #10 from djbubbles23/jacob-enemy)
    m_ConditionEvent: Attack1
    m_EventTreshold: 0
  m_DstStateMachine: {fileID: 0}
  m_DstState: {fileID: 2594326214313200415}
<<<<<<< HEAD
>>>>>>> parent of 290f4b8 (Merge pull request #10 from djbubbles23/jacob-enemy)
=======
>>>>>>> parent of 290f4b8 (Merge pull request #10 from djbubbles23/jacob-enemy)
  m_Solo: 0
  m_Mute: 0
  m_IsExit: 0
  serializedVersion: 3
  m_TransitionDuration: 0.25
  m_TransitionOffset: 0
  m_ExitTime: 0.7457627
  m_HasExitTime: 0
  m_HasFixedDuration: 1
<<<<<<< HEAD
<<<<<<< HEAD
  m_InterruptionSource: 1
=======
  m_InterruptionSource: 0
>>>>>>> parent of 290f4b8 (Merge pull request #10 from djbubbles23/jacob-enemy)
=======
  m_InterruptionSource: 0
>>>>>>> parent of 290f4b8 (Merge pull request #10 from djbubbles23/jacob-enemy)
  m_OrderedInterruption: 1
  m_CanTransitionToSelf: 1
--- !u!1101 &-3979898558562531008
AnimatorStateTransition:
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: 
  m_Conditions:
  - m_ConditionMode: 2
    m_ConditionEvent: Attack1
    m_EventTreshold: 0
  m_DstStateMachine: {fileID: 0}
  m_DstState: {fileID: -9014683350340567965}
  m_Solo: 0
  m_Mute: 0
  m_IsExit: 0
  serializedVersion: 3
  m_TransitionDuration: 0.25
  m_TransitionOffset: 0
  m_ExitTime: 0.8333334
  m_HasExitTime: 1
  m_HasFixedDuration: 1
  m_InterruptionSource: 0
  m_OrderedInterruption: 1
  m_CanTransitionToSelf: 1
<<<<<<< HEAD
<<<<<<< HEAD
=======
=======
>>>>>>> parent of 290f4b8 (Merge pull request #10 from djbubbles23/jacob-enemy)
--- !u!1102 &-150888120944435091
AnimatorState:
  serializedVersion: 6
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: Death final
  m_Speed: 1
  m_CycleOffset: 0
  m_Transitions: []
  m_StateMachineBehaviours: []
  m_Position: {x: 50, y: 50, z: 0}
  m_IKOnFeet: 0
  m_WriteDefaultValues: 1
  m_Mirror: 0
  m_SpeedParameterActive: 0
  m_MirrorParameterActive: 0
  m_CycleOffsetParameterActive: 0
  m_TimeParameterActive: 0
  m_Motion: {fileID: 7400000, guid: 9e783d87387db4344b239b17bdd5e4eb, type: 2}
  m_Tag: 
  m_SpeedParameter: 
  m_MirrorParameter: 
  m_CycleOffsetParameter: 
  m_TimeParameter: 
<<<<<<< HEAD
>>>>>>> parent of 290f4b8 (Merge pull request #10 from djbubbles23/jacob-enemy)
=======
>>>>>>> parent of 290f4b8 (Merge pull request #10 from djbubbles23/jacob-enemy)
--- !u!91 &9100000
AnimatorController:
  m_ObjectHideFlags: 0
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: DaggerPlayerController
  serializedVersion: 5
  m_AnimatorParameters:
<<<<<<< HEAD
<<<<<<< HEAD
=======
=======
>>>>>>> parent of 290f4b8 (Merge pull request #10 from djbubbles23/jacob-enemy)
  - m_Name: Attack1
    m_Type: 4
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
<<<<<<< HEAD
>>>>>>> parent of 290f4b8 (Merge pull request #10 from djbubbles23/jacob-enemy)
=======
>>>>>>> parent of 290f4b8 (Merge pull request #10 from djbubbles23/jacob-enemy)
  - m_Name: isMoving
    m_Type: 4
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
<<<<<<< HEAD
<<<<<<< HEAD
  - m_Name: isAttacking
    m_Type: 9
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: isJumping
    m_Type: 9
=======
  - m_Name: isDead
    m_Type: 4
>>>>>>> parent of 290f4b8 (Merge pull request #10 from djbubbles23/jacob-enemy)
=======
  - m_Name: isDead
    m_Type: 4
>>>>>>> parent of 290f4b8 (Merge pull request #10 from djbubbles23/jacob-enemy)
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  m_AnimatorLayers:
  - serializedVersion: 5
    m_Name: Base Layer
    m_StateMachine: {fileID: 1309406617909552362}
    m_Mask: {fileID: 0}
    m_Motions: []
    m_Behaviours: []
    m_BlendingMode: 0
    m_SyncedLayerIndex: -1
    m_DefaultWeight: 0
    m_IKPass: 0
    m_SyncedLayerAffectsTiming: 0
    m_Controller: {fileID: 9100000}
<<<<<<< HEAD
<<<<<<< HEAD
--- !u!1101 &258792254146897031
AnimatorStateTransition:
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: 
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: isAttacking
    m_EventTreshold: 0
  m_DstStateMachine: {fileID: 0}
  m_DstState: {fileID: 7241619134517219114}
  m_Solo: 0
  m_Mute: 0
  m_IsExit: 0
  serializedVersion: 3
  m_TransitionDuration: 0.044141054
  m_TransitionOffset: 0.0054895915
  m_ExitTime: 0.94868666
  m_HasExitTime: 0
  m_HasFixedDuration: 1
  m_InterruptionSource: 2
  m_OrderedInterruption: 1
  m_CanTransitionToSelf: 1
=======
>>>>>>> parent of 290f4b8 (Merge pull request #10 from djbubbles23/jacob-enemy)
=======
>>>>>>> parent of 290f4b8 (Merge pull request #10 from djbubbles23/jacob-enemy)
--- !u!1107 &1309406617909552362
AnimatorStateMachine:
  serializedVersion: 6
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: Base Layer
  m_ChildStates:
  - serializedVersion: 1
    m_State: {fileID: -9014683350340567965}
    m_Position: {x: 280, y: 40, z: 0}
  - serializedVersion: 1
<<<<<<< HEAD
<<<<<<< HEAD
    m_State: {fileID: 8327408247714181870}
    m_Position: {x: 540, y: 40, z: 0}
  - serializedVersion: 1
    m_State: {fileID: 7241619134517219114}
    m_Position: {x: 280, y: 110, z: 0}
  - serializedVersion: 1
    m_State: {fileID: -4788512653900767173}
    m_Position: {x: 540, y: 110, z: 0}
=======
=======
>>>>>>> parent of 290f4b8 (Merge pull request #10 from djbubbles23/jacob-enemy)
    m_State: {fileID: 8554825292640151385}
    m_Position: {x: 540, y: 140, z: 0}
  - serializedVersion: 1
    m_State: {fileID: 2594326214313200415}
    m_Position: {x: 280, y: 230, z: 0}
  - serializedVersion: 1
    m_State: {fileID: -150888120944435091}
    m_Position: {x: 20, y: 140, z: 0}
<<<<<<< HEAD
>>>>>>> parent of 290f4b8 (Merge pull request #10 from djbubbles23/jacob-enemy)
=======
>>>>>>> parent of 290f4b8 (Merge pull request #10 from djbubbles23/jacob-enemy)
  m_ChildStateMachines: []
  m_AnyStateTransitions: []
  m_EntryTransitions: []
  m_StateMachineTransitions: {}
  m_StateMachineBehaviours: []
<<<<<<< HEAD
<<<<<<< HEAD
  m_AnyStatePosition: {x: -130, y: -90, z: 0}
  m_EntryPosition: {x: 300, y: -40, z: 0}
  m_ExitPosition: {x: 800, y: 120, z: 0}
  m_ParentStateMachinePosition: {x: 800, y: 20, z: 0}
  m_DefaultState: {fileID: -9014683350340567965}
=======
=======
>>>>>>> parent of 290f4b8 (Merge pull request #10 from djbubbles23/jacob-enemy)
  m_AnyStatePosition: {x: -60, y: -140, z: 0}
  m_EntryPosition: {x: 300, y: -40, z: 0}
  m_ExitPosition: {x: -210, y: 150, z: 0}
  m_ParentStateMachinePosition: {x: 800, y: 20, z: 0}
  m_DefaultState: {fileID: -9014683350340567965}
--- !u!1101 &2181179612027592023
AnimatorStateTransition:
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: 
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: isDead
    m_EventTreshold: 0
  m_DstStateMachine: {fileID: 0}
  m_DstState: {fileID: -150888120944435091}
  m_Solo: 0
  m_Mute: 0
  m_IsExit: 0
  serializedVersion: 3
  m_TransitionDuration: 0.25
  m_TransitionOffset: 0
  m_ExitTime: 0.040266313
  m_HasExitTime: 1
  m_HasFixedDuration: 1
  m_InterruptionSource: 1
  m_OrderedInterruption: 1
  m_CanTransitionToSelf: 1
<<<<<<< HEAD
>>>>>>> parent of 290f4b8 (Merge pull request #10 from djbubbles23/jacob-enemy)
=======
>>>>>>> parent of 290f4b8 (Merge pull request #10 from djbubbles23/jacob-enemy)
--- !u!1102 &2594326214313200415
AnimatorState:
  serializedVersion: 6
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: SwordAndSlash
  m_Speed: 3
  m_CycleOffset: 0
  m_Transitions:
  - {fileID: -7390647639524904122}
  - {fileID: -3979898558562531008}
  m_StateMachineBehaviours: []
  m_Position: {x: 50, y: 50, z: 0}
  m_IKOnFeet: 0
  m_WriteDefaultValues: 1
  m_Mirror: 0
  m_SpeedParameterActive: 0
  m_MirrorParameterActive: 0
  m_CycleOffsetParameterActive: 0
  m_TimeParameterActive: 0
  m_Motion: {fileID: 7400000, guid: 362a418c0df02d847ba02ddee71756b4, type: 2}
  m_Tag: 
  m_SpeedParameter: 
  m_MirrorParameter: 
  m_CycleOffsetParameter: 
  m_TimeParameter: 
<<<<<<< HEAD
<<<<<<< HEAD
--- !u!1101 &4158631515187076465
=======
=======
>>>>>>> parent of 290f4b8 (Merge pull request #10 from djbubbles23/jacob-enemy)
--- !u!1101 &3009078668792262080
AnimatorStateTransition:
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: 
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: isMoving
    m_EventTreshold: 0
  m_DstStateMachine: {fileID: 0}
  m_DstState: {fileID: 8554825292640151385}
  m_Solo: 0
  m_Mute: 0
  m_IsExit: 0
  serializedVersion: 3
  m_TransitionDuration: 0.115412064
  m_TransitionOffset: 0.052370045
  m_ExitTime: 0.028405288
  m_HasExitTime: 0
  m_HasFixedDuration: 1
  m_InterruptionSource: 1
  m_OrderedInterruption: 1
  m_CanTransitionToSelf: 1
--- !u!1101 &4883768831082141029
AnimatorStateTransition:
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: 
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: isDead
    m_EventTreshold: 0
  m_DstStateMachine: {fileID: 0}
  m_DstState: {fileID: -150888120944435091}
  m_Solo: 0
  m_Mute: 0
  m_IsExit: 0
  serializedVersion: 3
  m_TransitionDuration: 0.25
  m_TransitionOffset: 0
  m_ExitTime: 0.0054711006
  m_HasExitTime: 1
  m_HasFixedDuration: 1
  m_InterruptionSource: 1
  m_OrderedInterruption: 1
  m_CanTransitionToSelf: 1
--- !u!1101 &6640419389714968504
<<<<<<< HEAD
>>>>>>> parent of 290f4b8 (Merge pull request #10 from djbubbles23/jacob-enemy)
=======
>>>>>>> parent of 290f4b8 (Merge pull request #10 from djbubbles23/jacob-enemy)
AnimatorStateTransition:
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: 
  m_Conditions:
  - m_ConditionMode: 2
    m_ConditionEvent: isMoving
    m_EventTreshold: 0
  m_DstStateMachine: {fileID: 0}
  m_DstState: {fileID: -9014683350340567965}
  m_Solo: 0
  m_Mute: 0
  m_IsExit: 0
  serializedVersion: 3
<<<<<<< HEAD
<<<<<<< HEAD
  m_TransitionDuration: 0.03829579
  m_TransitionOffset: 0.001276174
  m_ExitTime: 4.7187143e-10
  m_HasExitTime: 0
  m_HasFixedDuration: 0
  m_InterruptionSource: 1
  m_OrderedInterruption: 1
  m_CanTransitionToSelf: 1
--- !u!1102 &7241619134517219114
AnimatorState:
  serializedVersion: 6
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: SwordAndSlash
  m_Speed: 4
  m_CycleOffset: 0
  m_Transitions:
  - {fileID: -8023699395987279276}
  m_StateMachineBehaviours: []
  m_Position: {x: 50, y: 50, z: 0}
  m_IKOnFeet: 0
  m_WriteDefaultValues: 1
  m_Mirror: 0
  m_SpeedParameterActive: 0
  m_MirrorParameterActive: 0
  m_CycleOffsetParameterActive: 0
  m_TimeParameterActive: 0
  m_Motion: {fileID: 7400000, guid: 362a418c0df02d847ba02ddee71756b4, type: 2}
  m_Tag: 
  m_SpeedParameter: 
  m_MirrorParameter: 
  m_CycleOffsetParameter: 
  m_TimeParameter: 
--- !u!1102 &8327408247714181870
=======
=======
>>>>>>> parent of 290f4b8 (Merge pull request #10 from djbubbles23/jacob-enemy)
  m_TransitionDuration: 0.030000031
  m_TransitionOffset: 0.11525386
  m_ExitTime: 0.923149
  m_HasExitTime: 0
  m_HasFixedDuration: 1
  m_InterruptionSource: 1
  m_OrderedInterruption: 1
  m_CanTransitionToSelf: 1
--- !u!1102 &8554825292640151385
<<<<<<< HEAD
>>>>>>> parent of 290f4b8 (Merge pull request #10 from djbubbles23/jacob-enemy)
=======
>>>>>>> parent of 290f4b8 (Merge pull request #10 from djbubbles23/jacob-enemy)
AnimatorState:
  serializedVersion: 6
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: Run
  m_Speed: 1
  m_CycleOffset: 0
  m_Transitions:
<<<<<<< HEAD
<<<<<<< HEAD
  - {fileID: 4158631515187076465}
  - {fileID: -9136861321367719052}
=======
  - {fileID: 6640419389714968504}
  - {fileID: 2181179612027592023}
>>>>>>> parent of 290f4b8 (Merge pull request #10 from djbubbles23/jacob-enemy)
=======
  - {fileID: 6640419389714968504}
  - {fileID: 2181179612027592023}
>>>>>>> parent of 290f4b8 (Merge pull request #10 from djbubbles23/jacob-enemy)
  m_StateMachineBehaviours: []
  m_Position: {x: 50, y: 50, z: 0}
  m_IKOnFeet: 0
  m_WriteDefaultValues: 1
  m_Mirror: 0
  m_SpeedParameterActive: 0
  m_MirrorParameterActive: 0
  m_CycleOffsetParameterActive: 0
  m_TimeParameterActive: 0
<<<<<<< HEAD
<<<<<<< HEAD
  m_Motion: {fileID: -203655887218126122, guid: 39e458f7e82abb747b7dada4d2c5c829, type: 3}
=======
  m_Motion: {fileID: 7400000, guid: b5e541c7cf71ecd409cf7d9ffe8872a0, type: 2}
>>>>>>> parent of 290f4b8 (Merge pull request #10 from djbubbles23/jacob-enemy)
=======
  m_Motion: {fileID: 7400000, guid: b5e541c7cf71ecd409cf7d9ffe8872a0, type: 2}
>>>>>>> parent of 290f4b8 (Merge pull request #10 from djbubbles23/jacob-enemy)
  m_Tag: 
  m_SpeedParameter: 
  m_MirrorParameter: 
  m_CycleOffsetParameter: 
  m_TimeParameter: 
